force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Accounting_Basis__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Basis__c</fullName>
    <label>Accounting Basis</label>
    <length>25</length>
    <type>Text</type>
</CustomField>