force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Accrued_Interest__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest__c</fullName>
    <label>Accrued Interest</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>