force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Acres__c.field-meta.xml
<CustomField>
    <fullName>Acres__c</fullName>
    <label>Acres</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>