force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Additional_Description__c.field-meta.xml
<CustomField>
    <fullName>Additional_Description__c</fullName>
    <label>Additional Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>