force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Adjusted_Value__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_Value__c</fullName>
    <description>Calculated field to calculate the adjusted value of a spreads schedule item/row</description>
    <label>Adjusted Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>