force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <description>For the user to adjust the reported value of the item/row</description>
    <inlineHelpText>User adjustment to the reported value</inlineHelpText>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>