force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Adjustments__c</fullName>
    <label>Adjustments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>