force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Advertising__c.field-meta.xml
<CustomField>
    <fullName>Advertising__c</fullName>
    <label>Advertising</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>