force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Age_and_Weight__c.field-meta.xml
<CustomField>
    <fullName>Age_and_Weight__c</fullName>
    <label>Age and Weight</label>
    <length>50</length>
    <type>Text</type>
</CustomField>