force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Amortization__c.field-meta.xml
<CustomField>
    <fullName>Amortization__c</fullName>
    <label>Amortization</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>