force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Amortization_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Amortization_in_Months__c</fullName>
    <label>Amortization in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>