force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Amount_of_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Reserves__c</fullName>
    <label>Amount of Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>