force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Amount_Per_Verification__c.field-meta.xml
<CustomField>
    <fullName>Amount_Per_Verification__c</fullName>
    <label>Amount Per Verification</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>