force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Auto_and_Travel__c.field-meta.xml
<CustomField>
    <fullName>Auto_and_Travel__c</fullName>
    <label>Auto and Travel</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>