force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Available_Occupancy_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Available_Occupancy_Percentage__c</fullName>
    <label>Available Occupancy Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>