force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Average_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Average_Daily_Rate__c</fullName>
    <label>Average Daily Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>