force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <label>Beneficiary</label>
    <length>50</length>
    <type>Text</type>
</CustomField>