force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Business_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Name__c</fullName>
    <label>Business Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>