force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Calculated_Basis__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Basis__c</fullName>
    <label>Calculated Basis</label>
    <length>10</length>
    <type>Text</type>
</CustomField>