force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Capital_Contributed_During_the_Year__c.field-meta.xml
<CustomField>
    <fullName>Capital_Contributed_During_the_Year__c</fullName>
    <label>Capital Contributed During the Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>