force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Car_and_Truck_Expense__c.field-meta.xml
<CustomField>
    <fullName>Car_and_Truck_Expense__c</fullName>
    <label>Car and Truck Expense</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>