force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Cash_Distributions__c.field-meta.xml
<CustomField>
    <fullName>Cash_Distributions__c</fullName>
    <label>Cash Distributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>