force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Cash_from_Dividends__c.field-meta.xml
<CustomField>
    <fullName>Cash_from_Dividends__c</fullName>
    <label>Cash from Dividends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>