force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Cash_Inflow_Outflow__c.field-meta.xml
<CustomField>
    <fullName>Cash_Inflow_Outflow__c</fullName>
    <label>Cash Inflow/Outflow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>