force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Cash_to_Closing__c.field-meta.xml
<CustomField>
    <fullName>Cash_to_Closing__c</fullName>
    <label>Cash to Closing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>