force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Certificate_of_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Deposit__c</fullName>
    <label>Certificate of Deposit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>