force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Checking__c.field-meta.xml
<CustomField>
    <fullName>Checking__c</fullName>
    <label>Checking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>