force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Collateral_Security__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Security__c</fullName>
    <label>Collateral Security</label>
    <length>25</length>
    <type>Text</type>
</CustomField>