force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Commissions__c.field-meta.xml
<CustomField>
    <fullName>Commissions__c</fullName>
    <label>Commissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>