force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Commissions_and_Fees__c.field-meta.xml
<CustomField>
    <fullName>Commissions_and_Fees__c</fullName>
    <label>Commissions and Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>