force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Concession_Collection_Loss__c.field-meta.xml
<CustomField>
    <fullName>Concession_Collection_Loss__c</fullName>
    <label>Concession Collection Loss</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>