force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>