force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Contract_Labor__c.field-meta.xml
<CustomField>
    <fullName>Contract_Labor__c</fullName>
    <label>Contract Labor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>