force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Contracted__c.field-meta.xml
<CustomField>
    <fullName>Contracted__c</fullName>
    <label>Contracted</label>
    <length>10</length>
    <type>Text</type>
</CustomField>