force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Contributions__c.field-meta.xml
<CustomField>
    <fullName>Contributions__c</fullName>
    <label>Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>