force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Corporation_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporation_Name__c</fullName>
    <label>Corporation Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>