force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Cost_or_Other_Basis__c.field-meta.xml
<CustomField>
    <fullName>Cost_or_Other_Basis__c</fullName>
    <label>Cost or Other Basis</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>