force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Creditor__c.field-meta.xml
<CustomField>
    <fullName>Creditor__c</fullName>
    <label>Creditor</label>
    <type>TextArea</type>
</CustomField>