force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Crop_Acres__c.field-meta.xml
<CustomField>
    <fullName>Crop_Acres__c</fullName>
    <label>Crop Acres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>