force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Crop_Insurance_Proceeds__c.field-meta.xml
<CustomField>
    <fullName>Crop_Insurance_Proceeds__c</fullName>
    <label>Crop Insurance Proceeds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>