force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>Crop_Type__c</fullName>
    <label>Crop Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>