force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <label>Current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>