force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Current_Principal__c.field-meta.xml
<CustomField>
    <fullName>Current_Principal__c</fullName>
    <label>Current Principal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>