force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Current_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Total_Value__c</fullName>
    <label>Current Total Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>