force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Current_Value_Per_Share__c.field-meta.xml
<CustomField>
    <fullName>Current_Value_Per_Share__c</fullName>
    <label>Current Value Per Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>