force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Date_Paid_Through__c.field-meta.xml
<CustomField>
    <fullName>Date_Paid_Through__c</fullName>
    <label>Date Paid Through</label>
    <length>25</length>
    <type>Text</type>
</CustomField>