force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Debt_Service_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Debt_Service_Coverage__c</fullName>
    <label>Debt Service Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>