force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Delinquencies__c.field-meta.xml
<CustomField>
    <fullName>Delinquencies__c</fullName>
    <label>Delinquencies</label>
    <length>25</length>
    <type>Text</type>
</CustomField>