force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Depl_Depr_And_Sect179_Exp__c.field-meta.xml
<CustomField>
    <fullName>Depl_Depr_And_Sect179_Exp__c</fullName>
    <label>Depl, Depr And Sect179 Exp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>