force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Depletion__c.field-meta.xml
<CustomField>
    <fullName>Depletion__c</fullName>
    <label>Depletion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>