force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation__c</fullName>
    <label>Depreciation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>