force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Depreciation_and_Depletion__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_and_Depletion__c</fullName>
    <label>Depreciation and Depletion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>