force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Depreciation_or_Depletion__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_or_Depletion__c</fullName>
    <label>Depreciation or Depletion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>