force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Description_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Property__c</fullName>
    <label>Description of Property</label>
    <length>50</length>
    <type>Text</type>
</CustomField>