force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Distributions__c.field-meta.xml
<CustomField>
    <fullName>Distributions__c</fullName>
    <label>Distributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>