force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Eligible_Verified_Total__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Verified_Total__c</fullName>
    <label>Eligible Verified Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>