force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Employee_Benefit_Programs__c.field-meta.xml
<CustomField>
    <fullName>Employee_Benefit_Programs__c</fullName>
    <label>Employee Benefit Programs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>