force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Equipment_Description__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Description__c</fullName>
    <label>Equipment Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>