force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Equity__c.field-meta.xml
<CustomField>
    <fullName>Equity__c</fullName>
    <label>Equity Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>