force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Estate_or_Trust_Name__c.field-meta.xml
<CustomField>
    <fullName>Estate_or_Trust_Name__c</fullName>
    <label>Estate or Trust Name</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>