force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Expenses_for_Business_Use_of_Home__c.field-meta.xml
<CustomField>
    <fullName>Expenses_for_Business_Use_of_Home__c</fullName>
    <label>Expenses for Business Use of Home</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>