force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Face_Amount__c.field-meta.xml
<CustomField>
    <fullName>Face_Amount__c</fullName>
    <label>Face Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>