force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Farm_Cash_Flow__c.field-meta.xml
<CustomField>
    <fullName>Farm_Cash_Flow__c</fullName>
    <label>Farm Cash Flow</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>