force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Fixed_Asset__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Asset__c</fullName>
    <label>Fixed Asset</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>