force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Franchise_Fee__c.field-meta.xml
<CustomField>
    <fullName>Franchise_Fee__c</fullName>
    <label>Franchise Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>