force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gain_Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Gain_Loss_Type__c</fullName>
    <label>Gain / (Loss) Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>