force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gain_or_Loss__c.field-meta.xml
<CustomField>
    <fullName>Gain_or_Loss__c</fullName>
    <label>Gain or (Loss)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>