force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gross_Farm_Rental_Income__c.field-meta.xml
<CustomField>
    <fullName>Gross_Farm_Rental_Income__c</fullName>
    <label>Gross Farm Rental Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>