force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gross_Hotel_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Hotel_Revenue__c</fullName>
    <label>Gross Hotel Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>