force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gross_Potential_Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>Gross_Potential_Base_Rent__c</fullName>
    <label>Gross Potential Base Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>