force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gross_Profit_Margin__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Margin__c</fullName>
    <label>Gross Profit Margin</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>