force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Gross_Receipts_and_Sales__c.field-meta.xml
<CustomField>
    <fullName>Gross_Receipts_and_Sales__c</fullName>
    <label>Gross Receipts and Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>