force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Guaranteed_Payments__c.field-meta.xml
<CustomField>
    <fullName>Guaranteed_Payments__c</fullName>
    <label>Guaranteed Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>