force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Head__c.field-meta.xml
<CustomField>
    <fullName>Head__c</fullName>
    <label>Head</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>