force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/In_Borrowing_Structure__c.field-meta.xml
<CustomField>
    <fullName>In_Borrowing_Structure__c</fullName>
    <label>In Borrowing Structure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>