force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Income_Source__c.field-meta.xml
<CustomField>
    <fullName>Income_Source__c</fullName>
    <label>Income Source</label>
    <length>50</length>
    <type>Text</type>
</CustomField>