force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Interest_Income__c.field-meta.xml
<CustomField>
    <fullName>Interest_Income__c</fullName>
    <label>Interest Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>