force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Interest_Paid_to_Banks__c.field-meta.xml
<CustomField>
    <fullName>Interest_Paid_to_Banks__c</fullName>
    <label>Interest Paid to Banks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>