force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Item_Name__c</fullName>
    <label>Item Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>