force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Landlord__c.field-meta.xml
<CustomField>
    <fullName>Landlord__c</fullName>
    <label>Landlord</label>
    <length>25</length>
    <type>Text</type>
</CustomField>