force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Legal_and_Professional_Fees__c.field-meta.xml
<CustomField>
    <fullName>Legal_and_Professional_Fees__c</fullName>
    <label>Legal and Professional Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>