force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Lending_Institution__c.field-meta.xml
<CustomField>
    <fullName>Lending_Institution__c</fullName>
    <label>Lending Institution</label>
    <length>50</length>
    <type>Text</type>
</CustomField>