force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Lien_Position__c.field-meta.xml
<CustomField>
    <fullName>Lien_Position__c</fullName>
    <label>Lien Position</label>
    <length>10</length>
    <type>Text</type>
</CustomField>