force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Livestock_Description__c.field-meta.xml
<CustomField>
    <fullName>Livestock_Description__c</fullName>
    <label>Livestock Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>