force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Livestock_Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Livestock_Subcategory__c</fullName>
    <label>Livestock Subcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>