force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Living_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Living_Expenses__c</fullName>
    <label>Living Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>