force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Living_Expenses_Auto_Calc__c.field-meta.xml
<CustomField>
    <fullName>Living_Expenses_Auto_Calc__c</fullName>
    <label>Living Expenses Auto Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>