force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Loans_Forfeited__c.field-meta.xml
<CustomField>
    <fullName>Loans_Forfeited__c</fullName>
    <label>Loans Forfeited</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>