force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Long_Term__c.field-meta.xml
<CustomField>
    <fullName>Long_Term__c</fullName>
    <label>Long Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>