force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Long_Term_Principal__c.field-meta.xml
<CustomField>
    <fullName>Long_Term_Principal__c</fullName>
    <label>Long Term Principal</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>