force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Management_Fee_Auto_Calc__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Auto_Calc__c</fullName>
    <label>Management Fee Auto Calc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>