force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Management_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Management_Fee_Percentage__c</fullName>
    <label>Management Fee Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>