force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Management_Fees__c.field-meta.xml
<CustomField>
    <fullName>Management_Fees__c</fullName>
    <label>Management Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>