force-app/main/default/objects/LLC_BI__Schedule_Entry__c/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <label>Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>